# PhyloWidgits

./: PhyloWidgits.cabal  README.md  fastaYX2XY.hs
Types/: Types.hs
docs/: basicDoc.rtf
src/: Cyclic.hs  GeneralUtilities.hs  GraphFormatUtilities.hs  LocalGraph.hs  ParallelUtilities.hs  ReadFiles.hs  csv2Fasta.hs  csv2TCM.hs  edgeWeightDist.hs  fasta2TNT.hs  fastaDNA2AA.hs  filterFasta.hs  genRandomGraph.hs  genRandomTree.hs  getElements.hs  getInitialModel.hs  graph2Characters.hs  ia2Fasta.hs  ipaConvert.hs  meanWords.hs  mutateGraph.hs  nexus2Fasta.hs  pruneRandGraph.hs  randomSequences.hs  robinsonFoulds.hs  shuffleSequences.hs
src/fastaYX2XY/: fastaYX2XY.cabal
src/fastaYX2XY/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/mergeChromSNP/: mergeChromSNP.cabal  mergeChromSNP.hs
src/snp2Chrom/: snp2Chrom.cabal  snp2Chrom.hs  snp2ChromText.hs
src/snp2Chrom/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/snp2SS/: snp2SS.cabal  snp2SSText.hs
testData/: UT-belly.fastc  taxon1.txt  taxon2.txt  taxon3.txt  temp20-m0.dot  temp20-m20.dot  temp20-m20.tre  temp20-m5.dot  temp20.tre  temp200.tre  test-n6-1.tre  test-n6.tre
