cabal-version:  3.0
build-type:     Simple

name:           snp2Chrom
version:        0.1.0.0
--description:    Please see the README on GitHub at <https://github.com/githubuser/PhyGraph#readme>
--homepage:       https://github.com/githubuser/PhyGraph#readme
--bug-reports:    https://github.com/githubuser/PhyGraph/issues
--author:         Ward Wheeler
--maintainer:     wheeler@amnh.org
--copyright:      2021 Ward Wheeler
--license:        BSD3
--license-file:   LICENSE

-- for static linking add options -static -optl-static -optl-pthread
-- GKW cabal build --allow-newer --with-compiler=/usr/local/bin/ghc


executable snp2Chrom

  main-is: snp2ChromText.hs

  ghc-options:
    -O2
    -threaded
    -- for weeder
    -fwrite-ide-info
    -- remove for OSX 
    -- -optl-static -optl-pthread
    -static
    -- for native code generation remove the line below
    -- -fllvm
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissed-specialisations          
    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind
    -Wderiving-defaults
    -Wunused-packages

-- delete these for OSX
--  cc-options: -static
--  ld-options: -static -pthread

  build-depends:  base >=4.10
                , text
                
                
  default-extensions : BangPatterns                

  default-language: Haskell2010

  hs-source-dirs: .  
                 
  

  other-modules:  
                
                  


 